# user-invest-data

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ?  cron.yml  django.yml
accounts/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
accounts/management/commands/: seed_account.py
accounts/migrations/: 0001_initial.py  0002_account_principal_alter_account_number_and_more.py  0003_account_name.py  0004_account_trader_history.py  0004_remove_account_user_account_trader_and_more.py  0005_merge_20221102_0230.py  0005_remove_account_user_alter_account_name_accountowner_and_more.py  0006_alter_account_owner.py  0007_alter_account_owner.py  0008_transfer.py
assets/: models.py  serializers.py  tests.py  urls.py  views.py
assets/management/commands/: seed_assets.py
assets/migrations/: 0001_initial.py  0002_alter_asset_isin.py  0003_alter_group_name.py
config/: settings.py  urls.py
data/: account_asset_info_set.csv  account_basic_info_set.csv  asset_group_info_set.csv
invest/: tests.py  urls.py  views.py
stocks/: models.py
stocks/migrations/: 0001_initial.py
traders/: models.py  serializers.py  urls.py  views.py
traders/migrations/: 0001_initial.py  0002_rename_company_trader_name_remove_trader_amount_and_more.py
transactions/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
transactions/migrations/: 0001_initial.py  0002_transaction_account.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
(+1 files in other folders)
